<resources>
    <string name="app_name">StudyJamSession3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="pathway_61">Pathway 6_1</string>
    <string name="pathway_62">Pathway 6_2</string>
    <string name="next">Next</string>
    <string name="zero">0</string>
    <string name="previous">previous</string>
    <string name="welcome_message">Welcome to Session 3</string>
    <string name="start">Start</string>
    <string name="number_format">%d</string>
    <string name="add">Add</string>
    <string name="content_desc">Add a Note</string>
    <string name="note_hint">Make a note Below</string>
    <string name="save">Save</string>
    <string name="tv_note_hint">Start typing here</string>
    <string name="close">close</string>
    <string name="previous_note">Previous Note</string>
    <string name="pathway_7">Pathway 7</string>
</resources>